# ClientLibGUII

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  implementation_plan.md  item.json  mkdocs.yml  task.md  task2.md
.agent/: implementation_plan.md  map_implementation_plan.md  map_task.md  party_system_implementation.md  party_system_task.md  task.md  tile_render_analysis.md
BinOut/RelWithDebInfo/: ClientLib.exp
client-resources/examples/ifflorian0/Media/resinfo/: ginterface.txt
client-resources/examples/nifkyuubi09/Media/res_ui/: nifkyuubi09.2dt
cmake/: DevKit.cmake  Options.cmake  preset.json
docker/doxygen/: Dockerfile
docs/: ci.md  code-style.md  mainpage.dox
docs/advanced/: working-with-data.md
docs/getting-started/: index.md
docs/getting-started/required-tools/cmake/: index.md
docs/getting-started/required-tools/git/: index.md
docs/getting-started/required-tools/ninja/: index.md
docs/getting-started/required-tools/visual-studio-2005/: index.md
docs/getting-started/supported-ides/clion/: index.md
docs/getting-started/supported-ides/visual-studio/: index.md
docs/getting-started/supported-ides/vscode/: index.md
docs/resinfo/: ifflorian0guide.txt
helpers/: ninja-build.cmd
scripts/: gmwpfort2json.py  json2wndpos.py  wndpos2json.py
scripts/sro/: gwnd.py  wndpos.py
source/: CMakeLists.txt
source/DevKit_DLL/: CMakeLists.txt
source/DevKit_DLL/src/: ClientValidation.cpp  ClientValidation.h  CustomDamageRenderer.cpp  CustomDamageRenderer.h  CustomOpcodeHandler.cpp  CustomOpcodeHandler.h  DamageFix.cpp  DamageFix.h  DllMain.cpp  QuickStart.cpp  SoundBugFix.cpp  SoundBugFix.h  Util.cpp  Util.h  WindowedMode.cpp  WindowedMode.h  WindowedModeManager.cpp  WindowedModeManager.h
source/DevKit_DLL/src/examples/: IFflorian0.cpp  IFflorian0.h  NIFKyuubi09.cpp  NIFKyuubi09.h
source/DevKit_DLL/src/hooks/: CGame_Hook.cpp  GFXVideo3d_Hook.cpp  Hooks.cpp  Hooks.h  PlayerMiniInfo_Hook.cpp  PlayerMiniInfo_Hook.h  WndProc_Hook.cpp
source/DevKit_DLL/src/imgui_windows/: About.cpp  About.h  CharacterData.cpp  CustomGUISession.cpp  CustomGUISession.h  CustomMinimap.cpp  CustomMinimap.h  CustomPlayerMiniInfo.cpp  CustomPlayerMiniInfo.h  CustomWorldMap.cpp  CustomWorldMap.h  EntityExplorer.cpp  ImGui_Windows.cpp  InterfaceDebugger.cpp  InterfaceTree.cpp  Inventory.cpp  ItemData.cpp  ItemData.h  NativeBarRenderer.cpp  NativeBarRenderer.h  NavMeshTool.cpp  SROProgressBar.h  UIRenderer.h
source/libs/ClientLib/: CMakeLists.txt  TASK.md
source/libs/ClientLib/src/: ActiveBuffManager.cpp  ActiveBuffManager.h  AlramGuideMgrWnd.cpp  AutoAttackSkillController.cpp  AutoAttackSkillController.h  AutoBuffController.cpp  AutoBuffController.h  AutoMoveController.cpp  AutoMoveController.h  AutoTargetController.cpp  AutoTargetController.h  BufRender.h  CICUser.h  CIFDecoratedStatic_ECSRO.h  CIFMainMenuBar.cpp  CIFMainMenuBar.h  CIFMinimap.cpp  CIFMinimap.h  CIFOption_Game.cpp  CIFOption_Game.h  CIFStatic_ECSRO.h  CIFWnd_ECSRO.h  CIFWorldMap.h  CIItem.h  CTextBoard_ECSRO.h  CharacterDependentData.cpp  CharacterDependentData.h  CharacterPortrait.h  ClassLink.h  CustomCharIcons.cpp  CustomCharIcons.h  ECSRO_Classes.h  EntityManagerClient.h  EquippedItemManager.cpp  EquippedItemManager.h  GEffSoundBody.cpp  GEffSoundBody.h  GInterface.cpp  GInterface.h  Game.cpp  (+184 more)
source/libs/ClientLib/src/Data/: CharacterData.cpp  CharacterData.h  CommonData.h  ItemData.cpp  ItemData.h  LevelData.cpp  LevelData.h
source/libs/ClientNet/: CMakeLists.txt
source/libs/ClientNet/src/ClientNet/: ClientNet.h  MsgStreamBuffer.cpp  MsgStreamBuffer.h
source/libs/JMX_Library/BSLib/: CMakeLists.txt
source/libs/JMX_Library/BSLib/src/BSLib/: BSLib.cpp  BSLib.h  Debug.cpp  Debug.h  MsgHandler.cpp  StringCheck.cpp
source/libs/JMX_Library/BSLib/src/BSLib/_internal/: _BSMsg.h  custom_stl.h
source/libs/JMX_Library/BSLib/src/BSLib/memory/: MemPool.h
source/libs/JMX_Library/GFX/FM/: CMakeLists.txt
source/libs/JMX_Library/GFX/GFX3DFunction/: CMakeLists.txt
source/libs/JMX_Library/GFX/GFX3DFunction/src/GFX3DFunction/: DrawingHelpers.h  GFXVideo3d.cpp  GFXVideo3d.h  GFontTexture.cpp  GFontTexture.h  RStateMgr.cpp  RStateMgr.h  RTLoading.cpp  RTLoading.h  TextureRuntime.h
source/libs/JMX_Library/GFX/GFX3DFunction/src/GFX3DFunction/Common/: d3dapp.cpp
source/libs/JMX_Library/GFX/GFXMainFrame/: CMakeLists.txt
source/libs/JMX_Library/GFX/GFXMainFrame/src/GFXMainFrame/: Camera.cpp  Controler.h  EntityManager.h  GFXMainFrame.h  GWnd.cpp  GWnd.h  GWndBase.cpp  GWndBase.h  IEntity.h  Process.cpp  Process.h
source/libs/JMX_Library/SROInterfaceLib/: CMakeLists.txt
source/libs/JMX_Library/SROInterfaceLib/src/SRIFLib/: GNFontChar.h  IFSlotWithHelpEx.h  NGFontTexture.cpp  NGFontTexture.h  NIFButton.h  NIFDragableArea.h  NIFFrame.cpp  NIFFrame.h  NIFMainFrame.cpp  NIFMainFrame.h  NIFStatic.h  NIFTextBoard.cpp  NIFTextBoard.h  NIFTileWnd.cpp  NIFTileWnd.h  NIFUnderMenuBar.cpp  NIFUnderMenuBar.h  NIFWnd.cpp  NIFWnd.h  NInterfaceResource.cpp  NInterfaceResource.h
source/libs/MathHelpers/: CMakeLists.txt
source/libs/NavMesh/: CMakeLists.txt
source/libs/NavMesh/include/NavMesh/: NavMeshCollision.h  RTNavMesh.h  RTNavMeshTerrain.h  SNavMeshInst.h
source/libs/NavMesh/src/: NavMeshCollision.cpp  RTNavMeshTerrain.cpp
source/libs/SimpleViewer/: CMakeLists.txt
source/libs/TypeId/: CMakeLists.txt
source/libs/TypeId/include/: TypeIdBase.h
source/tests/: CMakeLists.txt
tools/: generate_itemdata_header.py  generate_simple_itemdata.py
