set(SOURCE_FILES src/BufRender.h
        src/IFAutoPotion.cpp src/IFAutoPotion.h
        src/CIFOption_Game.cpp src/CIFOption_Game.h
		src/IFRankingWindow.cpp src/IFRankingWindow.h
        src/CameraWorking.cpp
        src/CameraWorking.h
		src/LegendMainMenu.cpp
        src/LegendMainMenu.h
        src/CIFMainMenuButton.cpp src/CIFMainMenuButton.h
        src/CIFMainMenuBar.cpp src/CIFMainMenuBar.h
		src/GameSettings.cpp
        src/GameSettings.h
		src/IFUnderBar.cpp
        src/IFUnderBar.h
		src/IFComboBox.cpp
        src/IFComboBox.h
		src/IFHScroll_Option.cpp
        src/IFHScroll_Option.h
		src/IFSliderCtrl.cpp
        src/IFSliderCtrl.h
        src/Client.h
		src/IFNormalTile.h
        src/Data/ActionWndData.h
        src/Data/CharacterData.h src/Data/CharacterData.cpp
        src/Data/DropGoldData.h
        src/Data/GachaItemSetData.h
        src/Data/GachaNpcData.h
        src/Data/GameGuideData.h
        src/Data/ItemData.h src/Data/ItemData.cpp
        src/Data/LevelData.h src/Data/LevelData.cpp
        src/Data/LevelGoldData.h
        src/Data/MagicOptionData.h
        src/Data/MallItemMenuListData.h
        src/Data/MessageTipData.h
        src/Data/NPCChatData.h
        src/Data/NPCPosData.h
        src/Data/QuestData.h
        src/Data/RefPackageItemData.h
        src/Data/RefPricePolicyOfItem.h
        src/Data/RefScrapOfPackageItemData.h
        src/Data/RefShopdata.h
        src/Data/RefShopTabData.h
        src/Data/RefShopTabGroupData.h
        src/Data/ShopItemStockPeriod.h
        src/Data/ShopItemStockQuantity.h
        src/Data/TeleportBuilding.h
        src/Data/TeleportData.h
        src/Data/TeleportLink.h
        src/DxSound.h
        src/EntityManagerClient.h
        src/Game.cpp
        src/Game.h
        src/GEffSound.h
        src/GEffSoundBody.cpp
        src/GEffSoundBody.h
        src/GInterface.cpp
        src/GInterface.h
		src/IFItemMall.cpp src/IFItemMall.h
        src/GlobalDataManager.cpp src/GlobalDataManager.h
		src/IFMessageBox.cpp src/IFMessageBox.h
        src/GlobalHelpersThatHaveNoHomeYet.h
        src/GObj.h
        src/IDxSound.h
        src/IFAction.h
        src/IFApprenticeShip.h
        src/IFApprenticeShipSlot.h
        src/IFButton.cpp
        src/IFButton.h
        src/IFChatViewer.cpp src/IFChatViewer.h
        src/IFCloseButton.cpp
        src/IFCloseButton.h
        src/IFConsole.h
        src/IFDecoratedStatic.cpp
        src/IFDecoratedStatic.h
        src/IFDragableArea.cpp
        src/IFDragableArea.h
        src/IFEdit.h
        src/IFEquipment.h
        src/EquippedItemManager.cpp src/EquippedItemManager.h
        src/IFFade.h src/IFFade.cpp
        src/IFFrame.cpp
        src/IFFrame.h
        src/IFGauge.h
        src/IFHelperBubbleWindow.h
        src/IFInventory.cpp src/IFInventory.h
        src/IFMainFrame.cpp
        src/IFMainFrame.h
        src/IFMainPopup.cpp src/IFMainPopup.h
        src/IFNPCTalk.h
        src/IFNPCWindow.h
        src/IFParty.h
        src/IFPartySlot.h
        src/IFPlayerInfo.h src/IFPlayerInfo.cpp
        src/IFPlayerMiniInfo.cpp
        src/IFPlayerMiniInfo.h
		src/IFGGMainSlot.cpp
        src/IFGGMainSlot.h
        src/IFPractice.h
        src/IFQuest.h
        src/IFQuickStateHalfWnd.h
        src/IFQuickStateWnd.h
        src/IFScrollManager.cpp src/IFScrollManager.h
        src/IFSelectableArea.h
        src/IFSkill.h src/IFSkill.cpp
        src/IFSkillBoard.h
        src/IFSkillPracticeBox.h
        src/IFSlotWithHelp.cpp src/IFSlotWithHelp.h
        src/IFSpinButtonCtrl.h
        src/IFStatic.cpp
        src/IFStatic.h
        src/IFStaticWithPictureClip.h
        src/IFSystemMessage.cpp
        src/IFSystemMessage.h
		src/IFSystemWnd.cpp
        src/IFSystemWnd.h
        src/IFStorageRoom.h
        src/IFStoreForPackage.h
        src/IFStretchWnd.cpp src/IFStretchWnd.h
        src/IFSupporterChatWnd.h
        src/IFTextBox.h
        src/IFTileWnd.cpp
        src/IFTileWnd.h
        src/IFTimerWnd.h
        src/IFWnd.cpp
        src/IFWnd.h
        src/IObject.h src/IObject.cpp
        src/IRMManager.cpp
        src/IRMManager.h
        src/is_this_important.cpp
        src/is_this_important.h
        src/MessageBoxManager.h
        src/NavigationDeadreckon.cpp
        src/NavigationDeadreckon.h
        src/PSilkroad.cpp
        src/PSilkroad.h
		src/IFRegionView.cpp
        src/IFRegionView.h
        src/PSOuterInterface.cpp
        src/PSOuterInterface.h
        src/PSVersionCheck.h
        src/StringUtils.h
        src/TextBoard.cpp
        src/TextBoard.h
        src/unsorted.cpp
        src/unsorted.h
        src/AlramGuideMgrWnd.cpp src/AlramGuideMgrWnd.h
        src/IFConfirmReputationGuide.cpp src/IFConfirmReputationGuide.h
        src/IFEventGuide.cpp src/IFEventGuide.h
        src/IFQuestInfoGuide.cpp src/IFQuestInfoGuide.h
        src/IFLetterAlarmGuide.h
        src/IFServerEventGuide.cpp src/IFServerEventGuide.h
        src/IFOpenMarketAlramGuide.cpp src/IFOpenMarketAlramGuide.h
        src/IFEventGuideSecond.cpp src/IFEventGuideSecond.h
        src/IFflorian0Guide.cpp src/IFflorian0Guide.h
        src/MenuButton.cpp src/MenuButton.h
        src/MacroButton.cpp src/MacroButton.h
        src/RankingIcon.cpp src/RankingIcon.h
        src/SilkRoadWeb.cpp src/SilkRoadWeb.h
        src/PSQuickStart.cpp
        src/PSQuickStart.h
        src/TextStringManager.cpp src/TextStringManager.h
        src/IFNotify.cpp src/IFNotify.h
        src/IFListCtrl.cpp src/IFListCtrl.h
        src/LinkedScroll.cpp src/LinkedScroll.h
        src/IFVerticalScroll.cpp src/IFVerticalScroll.h
        src/IFScrollBar.cpp src/IFScrollBar.h
        src/IFTextBox.cpp src/IFTextBox.h
        src/IFSelectableArea.cpp src/IFSelectableArea.h
        src/IFChatModeViewer.cpp src/IFChatModeViewer.h
        src/ICPlayer.h src/ICPlayer.cpp
        src/SOItem.h src/SOItem.cpp
        src/ICUser.cpp src/ICUser.h
        src/IFEdit.cpp src/IFEdit.h
        src/SRO_MSG_DEF.h
        src/CharacterDependentData.cpp src/CharacterDependentData.h
        src/ICharactor.cpp src/ICharactor.h
        src/ClassLink.h
        src/IGIDObject.cpp src/IGIDObject.h
        src/IFNotify.cpp src/IFNotify.h
        src/NetProcessIn.cpp src/NetProcessIn.h
        src/NetProcessSecond.cpp src/NetProcessSecond.h
        src/NetProcessThird.cpp src/NetProcessThird.h
        src/PSMission.h
        src/GameCfg.cpp src/GameCfg.h
        src/LocalTime.cpp src/LocalTime.h
        src/IFCheckBox.cpp src/IFCheckBox.h
        src/IFRadioButton.cpp src/IFRadioButton.h
		src/IFGGMenu.cpp src/IFGGMenu.h
        src/IFChatOptionBoard.cpp src/IFChatOptionBoard.h
        src/PSCharacterSelect.cpp src/PSCharacterSelect.h
        src/CObjAnimation.h src/CObjAnimation.cpp
        src/AnimationCallback.h
        src/World.h src/World.cpp
		src/IFWorldMap.h src/IFWorldMap.cpp
        src/CompSimple.cpp src/CompSimple.h
        src/Keyframe.h src/Keyframe.cpp
        src/UserGuildInfo.cpp src/UserGuildInfo.h
        src/PartyData.h
        src/PartyMemberData.h
        src/IFWholeChat.cpp src/IFWholeChat.h
        src/IFBuffViewer.cpp src/IFBuffViewer.h
        src/IFTargetWindow.cpp src/IFTargetWindow.h
        src/IFTargetWindowPlayer.cpp src/IFTargetWindowPlayer.h
        src/IFTargetWindowJobPlayer.cpp src/IFTargetWindowJobPlayer.h
        src/IFTargetWindowSpecialMob.cpp src/IFTargetWindowSpecialMob.h
        src/IFTargetWindowCommonEnemy.cpp src/IFTargetWindowCommonEnemy.h
        src/IFTargetWindowFortressStructure.cpp src/IFTargetWindowFortressStructure.h
        src/IFExtQuickSlotSlot.cpp src/IFExtQuickSlotSlot.h
        src/IFExtQuickSlot.cpp src/IFExtQuickSlot.h
        src/IFExtQuickSlotOption.cpp src/IFExtQuickSlotOption.h
        src/ICNonuser.cpp src/ICNonuser.h
        src/ICMonster.cpp src/ICMonster.h
        src/ICCos.cpp src/ICCos.h
        src/LoginScreen.cpp src/LoginScreen.h 
        src/CustomCharIcons.cpp src/CustomCharIcons.h
        src/IFTestButton.cpp src/IFTestButton.h
        src/IFMacroWindow.cpp src/IFMacroWindow.h
        src/IFPetAutoPotion.cpp src/IFPetAutoPotion.h
        src/PetFilter.cpp src/PetFilter.h
        src/ItemDataGenerated.h
        src/IFPetFilterSettings.cpp src/IFPetFilterSettings.h
        src/CIItem.h
        )

add_library(ClientLib STATIC ${SOURCE_FILES} "src/IFAutoHuntSettings.cpp" "src/IFAutoHuntSettings.h" "src/IFLattice.cpp" "src/IFLattice.h" "src/IFSlot.cpp" "src/IFSlot.h" "src/LearnedSkillManager.cpp" "src/LearnedSkillManager.h" "src/IFSkillSlot.cpp" "src/IFSkillSlot.h" "src/ActiveBuffManager.cpp" "src/ActiveBuffManager.h" "src/AutoBuffController.cpp" "src/AutoBuffController.h" "src/AutoAttackSkillController.cpp" "src/AutoAttackSkillController.h" "src/AutoTargetController.cpp" "src/AutoTargetController.h" "src/AutoMoveController.cpp" "src/AutoMoveController.h" "src/ReturnToTownController.cpp" "src/ReturnToTownController.h" "src/CIFMinimap.cpp" "src/CIFMinimap.h")


target_link_libraries(ClientLib SROInterfaceLIB GFXMainFrame memory GFX3DFunction GFXFileManagerLIB NavMesh ClientNet SimpleViewer TypeId abi-testing imgui remodel ghidra d3d9 d3dx9)
target_include_directories(ClientLib PUBLIC src/)

# WebView2 support - include path for WebView2.h
target_include_directories(ClientLib PRIVATE ${CMAKE_SOURCE_DIR}/source/third-party/webview2/include)
